@@ -1,5 +1,11 @@
 2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/procdialogs.c: (procdialog_create_hide_dialog):
+	* src/proctable.c: (proctable_search_table): Fixed strings.
+	Closes #163959.
+
+2005-01-13  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/openfiles.c: (get_type_name): "internet connection" -> "network connection".
 
 2005-01-12  Martin Ejdestig  <mejde@dtek.chalmers.se>
